--- a/home.html
+++ b/home.html
@@ -14,9 +14,12 @@
       <h2 class="lend">
         借口合同
       </h2>
-      <div class='title'>
-        1231
-      </div>
+      <div class="motaik1">
+          <div class="title">
+            <p class='titleAll'>你已经提交了合同</p>
+            <button class="btnCanel1">确认</button>
+          </div>
+        </div>
       <div class="count">
         <div class="main">
           <from>
@@ -56,7 +59,7 @@
         </div>
 
         <div class='footer'>
-          <button class='btnsure'>确认无误</button>
+          <div class='btnsure'>确认无误</div>
         </div>
       </div>
     
